--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.21.4",
+		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.0",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
@@ -22,6 +23,7 @@
 		"multer": "^1.4.3",
 		"mysql": "^2.18.1",
 		"mysql2": "^2.3.0",
+		"path": "^0.12.7",
 		"sequelize": "^6.6.5"
 	},
 	"devDependencies": {
