--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
+    "fabric": "^4.6.0",
     "json-loader": "^0.5.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
