--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
 		"multer": "^1.4.3",
 		"mysql": "^2.18.1",
 		"mysql2": "^2.3.0",
+		"nodemailer": "^6.6.3",
 		"path": "^0.12.7",
 		"sequelize": "^6.6.5"
 	},
