--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"aws-sdk": "^2.988.0",
 		"axios": "^0.21.4",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.0",
@@ -21,6 +22,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.3",
+		"multer-s3": "^2.9.0",
 		"mysql": "^2.18.1",
 		"mysql2": "^2.3.0",
 		"nodemailer": "^6.6.3",
