--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
