--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"express-fileupload": "^1.2.1",
 		"fs": "^0.0.1-security",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.29.1",
