--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.4",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "fabric": "^4.6.0",
+    "formik": "^2.2.9",
     "json-loader": "^0.5.7",
     "react": "^17.0.2",
+    "react-color-palette": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
     "react-modal": "^3.14.3",
@@ -20,9 +25,12 @@
     "react-scripts": "^4.0.3",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.2.0",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
