--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
+		"express-fileupload": "^1.2.1",
 		"fs": "^0.0.1-security",
 		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.29.1",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.3",
 		"multer-s3": "^2.9.0",
@@ -28,7 +30,8 @@
 		"nodemailer": "^6.6.3",
 		"path": "^0.12.7",
 		"sequelize": "^6.6.5",
-		"sequelize-cli": "^6.2.0"
+		"sequelize-cli": "^6.2.0",
+		"socket.io": "^4.2.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.12"
