--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.2.0",
     "styled-components": "^5.3.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
