--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,14 @@
     "react": "^17.0.2",
     "react-color-palette": "^6.1.0",
     "react-dom": "^17.0.2",
+    "react-horizontal-scroll-grid": "^0.1.4",
     "react-image-gallery": "^1.2.7",
     "react-modal": "^3.14.3",
     "react-pinterest": "^1.2.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-scroll-horizontal": "^1.6.6",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-promise": "^0.6.0",
